Used JS changes to fix iframed i2ptunnel scrollbar issue in CSS
Also added comments to the JS to point out that the issue is that
offsetHeight doesn't include the very top or bottom margins.

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -1321,3 +1321,7 @@ div.applabel {
 }
 
 /* end home page */
+
+iframe.iframed {
+     margin: 15px 0 0;
+}
